--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="./css/style.css?v=1.0" rel="stylesheet" type="text/css">
 
     <title></title>
-
+</head>
 <body>
     <div class="page" id="page">
         <div class="header">
