--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <title></title>
 </head>
 <body>
+    <!--Правильная версия страницы-->
+    <div class="page" id="page">
+        <header>header</header>
+        <main></main>
+        <footer>footer</footer>
+    </div>
     <div class="page" id="page">
         <div class="header">
             <header class="container">
